Se avanzó con el Observer

--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdiomaBE.cs" />
+    <Compile Include="IdiomaEtiquetaBE.cs" />
+    <Compile Include="IdiomaTraduccionBE.cs" />
     <Compile Include="PerfilComponenteBE.cs" />
     <Compile Include="PerfilFamiliaBE.cs" />
     <Compile Include="PerfilPatenteBE.cs" />
