--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormIdiomaTraducciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormIdiomaTraducciones.Designer.cs">
+      <DependentUpon>FormIdiomaTraducciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,12 @@
     <Compile Include="FormPrincipal.Designer.cs">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormIdiomaEtiqueta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormIdiomaEtiqueta.Designer.cs">
+      <DependentUpon>FormIdiomaEtiqueta.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +90,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormIdiomaTraducciones.resx">
+      <DependentUpon>FormIdiomaTraducciones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -89,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormIdiomaEtiqueta.resx">
+      <DependentUpon>FormIdiomaEtiqueta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUsuarios.resx">
       <DependentUpon>FormUsuarios.cs</DependentUpon>
