--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdiomaEtiquetaBLL.cs" />
+    <Compile Include="TraductorBLL.cs" />
     <Compile Include="PerfilComponenteBLL.cs" />
     <Compile Include="PerfilFamilaBLL.cs" />
     <Compile Include="PerfilPatenteBLL.cs" />
