--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormIdioma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormIdioma.Designer.cs">
+      <DependentUpon>FormIdioma.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormIdiomaTraducciones.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormIdioma.resx">
+      <DependentUpon>FormIdioma.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormIdiomaTraducciones.resx">
       <DependentUpon>FormIdiomaTraducciones.cs</DependentUpon>
     </EmbeddedResource>
