--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormClienteAlta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormClienteAlta.Designer.cs">
+      <DependentUpon>FormClienteAlta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormClienteGestionar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormClienteGestionar.Designer.cs">
+      <DependentUpon>FormClienteGestionar.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormIdioma.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +88,12 @@
     <Compile Include="FormPerfilUsuario.Designer.cs">
       <DependentUpon>FormPerfilUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPresupuestoGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPresupuestoGestion.Designer.cs">
+      <DependentUpon>FormPresupuestoGestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +114,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormClienteAlta.resx">
+      <DependentUpon>FormClienteAlta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormClienteGestionar.resx">
+      <DependentUpon>FormClienteGestionar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormIdioma.resx">
       <DependentUpon>FormIdioma.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPerfilUsuario.resx">
       <DependentUpon>FormPerfilUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPresupuestoGestion.resx">
+      <DependentUpon>FormPresupuestoGestion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
