ABM Clientes Terminado, ABM Producto en proceso

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteBLL.cs" />
     <Compile Include="IdiomaEtiquetaBLL.cs" />
+    <Compile Include="ProductoBLL.cs" />
     <Compile Include="TraductorBLL.cs" />
     <Compile Include="PerfilComponenteBLL.cs" />
     <Compile Include="PerfilFamilaBLL.cs" />
