--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Acceso.cs" />
+    <Compile Include="ClienteDAL.cs" />
     <Compile Include="PerfilComponenteDAL.cs" />
     <Compile Include="PerfilFamiliaDAL.cs" />
     <Compile Include="PerfilPatenteDAL.cs" />
+    <Compile Include="ProductoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TraductorDAL.cs" />
     <Compile Include="UsuarioDAL.cs" />
