--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -52,6 +52,12 @@
     <Compile Include="FormClienteAlta.Designer.cs">
       <DependentUpon>FormClienteAlta.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormClienteEditar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormClienteEditar.Designer.cs">
+      <DependentUpon>FormClienteEditar.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormClienteGestionar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +112,18 @@
     <Compile Include="FormIdiomaEtiqueta.Designer.cs">
       <DependentUpon>FormIdiomaEtiqueta.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormProductoAlta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProductoAlta.Designer.cs">
+      <DependentUpon>FormProductoAlta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormProductoGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProductoGestion.Designer.cs">
+      <DependentUpon>FormProductoGestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +134,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormClienteAlta.resx">
       <DependentUpon>FormClienteAlta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormClienteEditar.resx">
+      <DependentUpon>FormClienteEditar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormClienteGestionar.resx">
       <DependentUpon>FormClienteGestionar.cs</DependentUpon>
@@ -143,6 +164,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormIdiomaEtiqueta.resx">
       <DependentUpon>FormIdiomaEtiqueta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductoAlta.resx">
+      <DependentUpon>FormProductoAlta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProductoGestion.resx">
+      <DependentUpon>FormProductoGestion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUsuarios.resx">
       <DependentUpon>FormUsuarios.cs</DependentUpon>
