--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="PerfilComponenteDAL.cs" />
     <Compile Include="PerfilFamiliaDAL.cs" />
     <Compile Include="PerfilPatenteDAL.cs" />
+    <Compile Include="PresupuestoDAL.cs" />
     <Compile Include="ProductoDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TraductorDAL.cs" />
