--- a/BE/BE.csproj
+++ b/BE/BE.csproj
@@ -51,6 +51,7 @@
     <Compile Include="PerfilTipoPermisoBE.cs" />
     <Compile Include="PresupuestoAprobacionBE.cs" />
     <Compile Include="PresupuestoBE.cs" />
+    <Compile Include="PresupuestoEstadoBE.cs" />
     <Compile Include="PresupuestoItemBE.cs" />
     <Compile Include="ProductoBE.cs" />
     <Compile Include="UsuarioBE.cs" />
