--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -136,6 +136,12 @@
     <Compile Include="FormPresupuestoCierre.Designer.cs">
       <DependentUpon>FormPresupuestoCierre.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPresupuestoEditar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPresupuestoEditar.Designer.cs">
+      <DependentUpon>FormPresupuestoEditar.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPresupuestoGestion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -230,6 +236,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPresupuestoCierre.resx">
       <DependentUpon>FormPresupuestoCierre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPresupuestoEditar.resx">
+      <DependentUpon>FormPresupuestoEditar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPresupuestoGestion.resx">
       <DependentUpon>FormPresupuestoGestion.cs</DependentUpon>
