--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FormClienteGestionar.Designer.cs">
       <DependentUpon>FormClienteGestionar.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormClienteVersion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormClienteVersion.Designer.cs">
+      <DependentUpon>FormClienteVersion.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormIdioma.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +209,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormClienteGestionar.resx">
       <DependentUpon>FormClienteGestionar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormClienteVersion.resx">
+      <DependentUpon>FormClienteVersion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormIdioma.resx">
       <DependentUpon>FormIdioma.cs</DependentUpon>
