--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -100,6 +100,24 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPedidoAlta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPedidoAlta.Designer.cs">
+      <DependentUpon>FormPedidoAlta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPedidoGestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPedidoGestion.Designer.cs">
+      <DependentUpon>FormPedidoGestion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormPedidoVisualizar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPedidoVisualizar.Designer.cs">
+      <DependentUpon>FormPedidoVisualizar.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPerfiles.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -230,6 +248,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPedidoAlta.resx">
+      <DependentUpon>FormPedidoAlta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPedidoGestion.resx">
+      <DependentUpon>FormPedidoGestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPedidoVisualizar.resx">
+      <DependentUpon>FormPedidoVisualizar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPerfiles.resx">
       <DependentUpon>FormPerfiles.cs</DependentUpon>
