--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Login\Sesion.cs" />
     <Compile Include="Login\SesionSingleton.cs" />
+    <Compile Include="ReporteVentasAtrasadas.cs" />
+    <Compile Include="SerializadorXML\FileStreamManager.cs" />
+    <Compile Include="SerializadorXML\Serializador.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BE\BE.csproj">
@@ -86,5 +89,6 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
